# MultiTaskSmartSys

./: .gitignore  CMakeLists.txt  README.md  convert.sh  demo.cpp
configs/: 8m.cfg
engines/: action.trt  gesture.trt
include/: base_engine.h  base_model.h  dbscan.h  logger.h  logging.h  multi_task.h  point.h  point_data_source.h  serial_parser.h  track.h  trt_model.h  utils.h
save_weights/: action.onnx  action.pth  gesture.onnx  gesture.pth
src/: logger.cpp  mutil_task.cpp  serial_parser.cpp  track.cpp  trt_model.cpp  utils.cpp
